--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>dsaa-swagger</module>
         <module>dsaa-array</module>
         <module>dsaa-linkedlist</module>
+        <module>dsaa-graph</module>
     </modules>
 
     <properties>
